; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_bread_nbits.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_bread_nbits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitreader = type { i32 }

@decode_cur_bit = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bread_nbits(%struct.bitreader* %0, i32 %1) #0 {
  %3 = alloca %struct.bitreader*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.bitreader* %0, %struct.bitreader** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = and i32 %7, -32
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  store i32 0, i32* %5, align 4
  %13 = load %struct.bitreader*, %struct.bitreader** %3, align 8
  %14 = getelementptr inbounds %struct.bitreader, %struct.bitreader* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %6, align 4
  br label %16

16:                                               ; preds = %28, %2
  %17 = load i32, i32* %4, align 4
  %18 = add nsw i32 %17, -1
  store i32 %18, i32* %4, align 4
  %19 = icmp ne i32 %17, 0
  br i1 %19, label %20, label %30

20:                                               ; preds = %16
  %21 = load i32, i32* %5, align 4
  %22 = shl i32 %21, 1
  store i32 %22, i32* %5, align 4
  %23 = load i64, i64* @decode_cur_bit, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = load i32, i32* %5, align 4
  %27 = add i32 %26, 1
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %25, %20
  %29 = call i32 (...) @decode_load_bit()
  br label %16

30:                                               ; preds = %16
  %31 = load i32, i32* %6, align 4
  %32 = load %struct.bitreader*, %struct.bitreader** %3, align 8
  %33 = getelementptr inbounds %struct.bitreader, %struct.bitreader* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @decode_load_bit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
